package hu.bme.mit.ftsrg.tpcc.entities;

public class BusinessEntity implements EntityInterface{
    
}
