package hu.bme.mit.ftsrg.tpcc.entities;

public interface EntityInterface {
    
}
